refactor: changed add center button background color.

--- a/template/center-details.html
+++ b/template/center-details.html
@@ -200,7 +200,7 @@
         <a href="#add_event_modal" class="tooltipped modal-trigger btn-large btn-floating green" data-position="top"
            data-tooltip="Add Event"><i class="material-icons">add</i>
         </a>
-        <a href="#edit_center_modal" class="tooltipped modal-trigger btn-large btn-floating green lighten-1" data-position="top"
+        <a href="#edit_center_modal" class="tooltipped modal-trigger btn-large btn-floating amber lighten-1" data-position="top"
            data-tooltip="Add Center"><i class="material-icons">add</i>
         </a>
     </div>
